<resources>
    <string name="app_name">GrocT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">Login_screen</string>
    <string name="title_activity_signup_screen">Signup_screen</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="title_activity_fruits">a</string>

    <!-- Please put your application's app ID and keys here -->
    <string name="parse_app_id">YOUR_PARSE_APP_ID</string>
    <string name="parse_client_key">YOUR_PARSE_CLIENT_KEY</string>
    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
    <string name="twitter_consumer_key">YOUR_TWITTER_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret">YOUR_TWITTER_CONSUMER_SECRET</string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="title_activity_signin">signin</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_description_item">description_item</string>
    <string name="title_activity_brinja">brinja</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_search">Search</string>
    <string name="one_desc">This amazing product will help you to fuel your Mind , Body and Soul.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_activity_two">Natural Juice !!</string>
    <string name="title_activity_three">Cocktails !!</string>
    <string name="cock_tail">Welsh Cocktails !</string>
    <string name="three_desc">Welsh Cocktails for the hype !</string>
    <string name="title_activity_four">Wow Deals !!</string>
    <string name="wow_deals">Wow Deals!</string>
    <string name="four_desc">Deals so good they will make you say WOW !!</string>
    <string name="two_desc">Natural juices to Refresh your mood</string>
    <string name="natural_juice">Natural juice !</string>
    <string name="my_cart">My Cart</string>
    <string name="my_profile">My Profile</string>
    <string name="help_center">Help Center</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_my_wishlist">My Wishlist</string>
    <string name="title_activity_my_orders">My orders</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_helpline">Helpline</string>
    <string name="title_activity_address_info">Address_info</string>
    <string name="title_activity_one">Protien !!</string>
    <string name="title_activity_xyz">xyz</string>
    <string name="search_hint">Search products here.</string>
    <string name="title_activity_payment_gateway">Payment Gateway</string>
    <string name="title_activity_beverages">Beverages</string>
    <string name="title_activity_personalcare">Personal care</string>
    <string name="title_activity_household">Household</string>
    <string name="title_activity_party_time">Party Time</string>
    <string name="title_activity_love">Love</string>
    <string name="title_activity_ufo">Ufo</string>
    <string name="title_activity_destiny">Destiny</string>
    <string name="title_activity_hurry">Hurry</string>
    <string name="title_activity_discount">Discount</string>
    <string name="title_activity_hurry1">hurry1</string>
</resources>
