<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="6"
        android:title="@string/help_center"
        app:showAsAction="never" />
    <item
        android:id="@+id/My_Cart"
        android:orderInCategory="2"
        android:title="@string/my_cart"
        app:showAsAction="never" />
    <item
        android:id="@+id/My_profile"
        android:orderInCategory="1"
        android:title="@string/my_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/My_Wishlist"
        android:orderInCategory="3"
        android:title="My Wishlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_us"
        android:orderInCategory="5"
        android:title="About Us"
        app:showAsAction="never" />
    <item
        android:id="@+id/My_Orders"
        android:orderInCategory="4"
        android:title="My Orders"
        app:showAsAction="never" />





    <item
        android:id="@+id/cart"
        android:icon="@drawable/search"
        android:orderInCategory="50"
        android:title="Cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/seac"
        android:orderInCategory="60"
        android:title="Search"
        app:showAsAction="always" />
</menu>
