<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/four_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/rlay"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <include layout="@layout/statusbarcolor" />

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar"></include>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlay">


    </RelativeLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp" />

    <ImageButton

        android:id="@+id/c_b"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/ratingBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/icons"
        android:src="@drawable/cart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/c_b"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_to_cart"
        android:text="@string/four_desc"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="46dp"
        android:src="@drawable/four" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_toEndOf="@+id/relativeLayout"
        android:layout_toRightOf="@+id/relativeLayout"
        android:text="@string/wow_deals"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>