<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluee"
    android:orientation="vertical"
    tools:context="tjs.co.in.groct.Sign_in">


        <LinearLayout
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/loginimage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView2"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="30dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/hint_name" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/hint_email" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/hint_password" />
                    </android.support.design.widget.TextInputLayout>

                    <Button android:id="@+id/btn_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_sign_up"
                        android:background="@color/accent"
                        android:layout_marginTop="40dp"
                        android:textColor="@android:color/white"/>

                    <Button android:id="@+id/btn_signin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="LOGIN "
                        android:background="@color/accent"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/white"/>

                    <Button android:id="@+id/btn_skip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Skip"
                        android:background="@color/accent"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/white"/>



                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>




        </TableLayout>



    </ScrollView>





    </LinearLayout>


